--- a/index.html
+++ b/index.html
@@ -147,10 +147,9 @@ Trong khi đó, CSS được sử dụng để điều chỉnh cách mà các ph
 - Khuôn mẫu định dạng: Cả Style Sheet và CSS đều cho phép bạn tạo ra các khuôn mẫu định dạng để áp dụng cho các phần tử văn bản. Bằng cách này, bạn có thể định dạng các tiêu đề, đoạn văn, danh sách, v.v., một cách thống nhất và dễ dàng.<br>
 - Kiểm soát phong cách và định dạng: Cả Style Sheet và CSS đều cho phép bạn kiểm soát phong cách và định dạng của các phần tử văn bản. Bạn có thể điều chỉnh màu sắc, kích thước chữ, font chữ, độ dày của đường viền, khoảng cách, v.v., để tạo ra giao diện văn bản phù hợp với ý định của mình.</p>
 <div style="background-color: #FFFFFF; padding: 10px;">
-        <h2>Vận dụng 2: Thiết lập trang web với nội dung sau và định dạng trang bằng các mẫu CSS<br>
-<img src="vandung2.png">
-</h2>
+        <h2>Vận dụng 2: Thiết lập trang web với nội dung sau và định dạng trang bằng các mẫu CSS</h2>
 </div>
+<img src="vandung2.png">
 <p>< !DOCTYPE html><br>
 < html lang="vi"><br>
 < head><br>
@@ -210,3 +209,4 @@ p {<br>
     margin: 10px 0;<br>
 
 }<br>
+
