--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@ Trong khi đó, CSS được sử dụng để điều chỉnh cách mà các ph
         <h2>Vận dụng 2: Thiết lập trang web với nội dung sau và định dạng trang bằng các mẫu CSS</h2>
 </div>
 <img src="vandung2.png">
+     <style>
+    .small-img {
+      width: 150px;      /* chiều rộng */
+      height: auto;      /* tự điều chỉnh chiều cao tỉ lệ */
+      border: 2px solid #333; /* tùy chọn viền */
+    }
+  </style>
 <p>< !DOCTYPE html><br>
 < html lang="vi"><br>
 < head><br>
@@ -207,6 +214,4 @@ a:hover {<br>
 }<br>
 p {<br>
     margin: 10px 0;<br>
-
 }<br>
-
