--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ body {
     <div class="menu-item">
         THÀNH VIÊN ▼
         <div class="dropdown">
-            <a href="#">PHƯƠNG DUYÊN</a>
-            <a href="#">MINH CHÂU</a>
-            <a href="#">KHẢ HÂN</a>
-            <a href="#">QUỲNH NHƯ</a>
+            <a href="https://himfri1314.github.io/phuongduyen/">PHƯƠNG DUYÊN</a>
+            <a href="https://himfri1314.github.io/minhchau/">MINH CHÂU</a>
+            <a href="https://himfri1314.github.io/khahan/">KHẢ HÂN</a>
+            <a href="https://himfri1314.github.io/quynhnhu/">QUỲNH NHƯ</a>
         </div>
     </div>
     <div class="menu-item">
@@ -152,7 +152,7 @@ Trong khi đó, CSS được sử dụng để điều chỉnh cách mà các ph
 <img src="vandung2.png">
      <style>
     .small-img {
-      width: 100px;      /* chiều rộng */
+      width: 60px;      /* chiều rộng */
       height: auto;      /* tự điều chỉnh chiều cao tỉ lệ */
       border: 2px solid #333; /* tùy chọn viền */
     }
@@ -215,4 +215,5 @@ a:hover {<br>
 p {<br>
     margin: 10px 0;<br>
 }<br>
+
 
