--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ body {
   <div style="background-color: #FFFFFF; padding: 10px;">
       <h2>Luyện tập 1: Khẳng định “Ngôn ngữ định dạng CSS chính là ngôn ngữ HTML” là đúng hay sai?</h2> 
   </div>
-      <p>Sai. Ngôn ngữ định dạng CSS (Cascading Style Sheets) không phải là ngôn ngữ HTML (HyperText Markup Language).<br>
-HTML được sử dụng để tạo cấu trúc và định dạng nội dung trên trang web bằng cách sử dụng các thẻ và các thuộc tính được nhúng trong các thẻ này.<br>
-Trong khi đó, CSS được sử dụng để điều chỉnh cách mà các phần tử HTML được hiển thị trên trình duyệt, bao gồm màu sắc, font chữ, khoảng cách, đường viền và các thuộc tính khác. CSS là một ngôn ngữ độc lập dùng để cung cấp phong cách và thiết kế cho các trang web, và nó hoạt động cùng với HTML để tạo ra trải nghiệm người dùng hoàn chỉnh.</p>
+      <p>Sai. Ngôn ngữ định dạng CSS (Cascading Style Sheets) không phải là ngôn ngữ HTML (HyperText Markup Language).</p>
+<p>HTML được sử dụng để tạo cấu trúc và định dạng nội dung trên trang web bằng cách sử dụng các thẻ và các thuộc tính được nhúng trong các thẻ này.</p>
+<p>Trong khi đó, CSS được sử dụng để điều chỉnh cách mà các phần tử HTML được hiển thị trên trình duyệt, bao gồm màu sắc, font chữ, khoảng cách, đường viền và các thuộc tính khác. CSS là một ngôn ngữ độc lập dùng để cung cấp phong cách và thiết kế cho các trang web, và nó hoạt động cùng với HTML để tạo ra trải nghiệm người dùng hoàn chỉnh.</p>
 <div style="background-color: #FFFFFF; padding: 10px;">
         <h2>Luyện tập 2:  Khẳng định “Có thể chỉ cần thay đổi thông tin của tệp CSS sẽ làm thay đổi định dạng của nhiều trang web thậm chí của cả một trang website” là đúng hay sai?</h2>
 </div>
@@ -141,11 +141,11 @@ Trong khi đó, CSS được sử dụng để điều chỉnh cách mà các ph
           <div style="background-color: #FFFFFF; padding: 10px;">
         <h2>Vận dụng 1: Trong các phần mềm soạn thảo văn bản thường có chức năng tạo các mẫu định dạng Style Sheet dùng để tạo khuôn cho các đoạn (paragraph) của văn bản. Em hãy trình bày sự giống nhau và tương thích của Style Sheet trong các phần mềm soạn thảo văn bản với CSS của trang web.</h2>
           </div>
-      <p>Sự giống nhau và tương thích của Style Sheet  trong các phần mềm soạn thảo văn bản với CSS của trang web:<br>
-  -Cấu trúc và cú pháp: Cả Style Sheet trong các phần mềm soạn thảo văn bản và CSS đều tuân theo một cấu trúc và cú pháp nhất định. Thông thường, các tệp Style Sheet được viết bằng cú pháp CSS trong trang web, trong khi các chức năng tạo định dạng trong phần mềm soạn thảo văn bản cũng sẽ tuân theo một cấu trúc tương tự.<br>
-- Tính tái sử dụng: Cả hai đều hỗ trợ tính tái sử dụng. Trong CSS, bạn có thể đặt các quy tắc định dạng trong một tệp riêng và áp dụng chúng cho nhiều trang web hoặc nhiều phần tử HTML khác nhau. Tương tự, trong các phần mềm soạn thảo văn bản, bạn có thể tạo các mẫu định dạng và áp dụng chúng cho nhiều phần văn bản khác nhau.<br>
-- Khuôn mẫu định dạng: Cả Style Sheet và CSS đều cho phép bạn tạo ra các khuôn mẫu định dạng để áp dụng cho các phần tử văn bản. Bằng cách này, bạn có thể định dạng các tiêu đề, đoạn văn, danh sách, v.v., một cách thống nhất và dễ dàng.<br>
-- Kiểm soát phong cách và định dạng: Cả Style Sheet và CSS đều cho phép bạn kiểm soát phong cách và định dạng của các phần tử văn bản. Bạn có thể điều chỉnh màu sắc, kích thước chữ, font chữ, độ dày của đường viền, khoảng cách, v.v., để tạo ra giao diện văn bản phù hợp với ý định của mình.</p>
+      <p>Sự giống nhau và tương thích của Style Sheet  trong các phần mềm soạn thảo văn bản với CSS của trang web:</p>
+<p>-Cấu trúc và cú pháp: Cả Style Sheet trong các phần mềm soạn thảo văn bản và CSS đều tuân theo một cấu trúc và cú pháp nhất định. Thông thường, các tệp Style Sheet được viết bằng cú pháp CSS trong trang web, trong khi các chức năng tạo định dạng trong phần mềm soạn thảo văn bản cũng sẽ tuân theo một cấu trúc tương tự.</p>
+<p>- Tính tái sử dụng: Cả hai đều hỗ trợ tính tái sử dụng. Trong CSS, bạn có thể đặt các quy tắc định dạng trong một tệp riêng và áp dụng chúng cho nhiều trang web hoặc nhiều phần tử HTML khác nhau. Tương tự, trong các phần mềm soạn thảo văn bản, bạn có thể tạo các mẫu định dạng và áp dụng chúng cho nhiều phần văn bản khác nhau.</p>
+<p>- Khuôn mẫu định dạng: Cả Style Sheet và CSS đều cho phép bạn tạo ra các khuôn mẫu định dạng để áp dụng cho các phần tử văn bản. Bằng cách này, bạn có thể định dạng các tiêu đề, đoạn văn, danh sách, v.v., một cách thống nhất và dễ dàng.</p>
+<p>- Kiểm soát phong cách và định dạng: Cả Style Sheet và CSS đều cho phép bạn kiểm soát phong cách và định dạng của các phần tử văn bản. Bạn có thể điều chỉnh màu sắc, kích thước chữ, font chữ, độ dày của đường viền, khoảng cách, v.v., để tạo ra giao diện văn bản phù hợp với ý định của mình.</p>
 <div style="background-color: #FFFFFF; padding: 10px;">
         <h2>Vận dụng 2: Thiết lập trang web với nội dung sau và định dạng trang bằng các mẫu CSS</h2>
 </div>
@@ -161,66 +161,61 @@ Trong khi đó, CSS được sử dụng để điều chỉnh cách mà các ph
       margin: 20px 0;
     }
   </style>
-<p>< !DOCTYPE html><br>
-< html lang="vi"><br>
-< head><br>
-    < meta charset="UTF-8"><br>
-    < meta name="viewport" content="width=device-width, initial-scale=1.0"><br>
-    < title>Lịch sử CSS< /title><br>
-    < link rel="stylesheet" href="styles.css"><br>
-< /head><br>
-< body><br>
-    < div class="container"><br>
-        < h1 class="title">Lịch sử CSS< /h1><br>
-        < p>Ý tưởng của CSS do kỹ sư Hakon Wium Lie, người Na Uy thiết lập năm 1994 trong khi làm việc với Tim Berners-Lee tại viện hạt nhân CERN.< /p><br>
-        < p>Ý tưởng của CSS là tạo ra các mẫu định dạng riêng, độc lập cho các phần tử HTML của trang web. Cách tạo ngôn ngữ định dạng riêng này sẽ giúp ích rất nhiều nếu so sánh với việc định dạng theo từng thẻ HTML.< /p><br>
-        < h2 class="subtitle">Lịch sử các phiên bản CSS đầu tiên< /h2><br>
-        < p>Các ý tưởng ban đầu được đưa ra năm 1994 nhưng phiên bản CSS1 chính thức ra đời năm 1996.< /p><br>
-        < p>Phiên bản tiếp theo, CSS2, được khởi động ngay sau đó nhưng mãi đến năm 1998 mới hoàn thiện. Phiên bản chính thức hoàn thiện nhất của CSS2 là CSS2.1, ra đời năm 2011, bản CSS2.1 nâng cấp được hoàn thiện năm 2016.< /p><br>
-        < h2 class="subtitle">Các phiên bản CSS tiếp theo< /h2><br>
-        < p>Từ bản CSS3 trở đi, CSS được phát triển theo từng gói riêng biệt. Hiện nay các gói của CSS3 vẫn đang được phát triển và hoàn thiện. Đồng thời một số chuẩn CSS4 và CSS5 vẫn đang được tiếp tục thiết lập mới.< /p><br>
-        < p>Hiện tại, hiệp hội chịu trách nhiệm phát triển các chuẩn của HTML, CSS và các công nghệ có liên quan là tổ chức World Wide Web Consortium (W3C), có địa chỉ tại < a href="http://www.w3.org/">www.w3.org< /a>.< /p><br>
-    < /div><br>
-< /body><br>
-< /html><r>
+<p>< !DOCTYPE html></p>
+<p>< html lang="vi"></p>
+<p>< head></p>
+<p>    < meta charset="UTF-8"></p>
+<p>    < meta name="viewport" content="width=device-width, initial-scale=1.0"></p>
+<p>    < title>Lịch sử CSS< /title></p>
+<p>    < link rel="stylesheet" href="styles.css"></p>
+<p>< /head></p>
+<p>< body></p>
+<p>    < div class="container"></p>
+<p>        < h1 class="title">Lịch sử CSS< /h1></p>
+<p>        < p>Ý tưởng của CSS do kỹ sư Hakon Wium Lie, người Na Uy thiết lập năm 1994 trong khi làm việc với Tim Berners-Lee tại viện hạt nhân CERN.< /p></p>
+<p>        < p>Ý tưởng của CSS là tạo ra các mẫu định dạng riêng, độc lập cho các phần tử HTML của trang web. Cách tạo ngôn ngữ định dạng riêng này sẽ giúp ích rất nhiều nếu so sánh với việc định dạng theo từng thẻ HTML.< /p></p>
+<p>        < h2 class="subtitle">Lịch sử các phiên bản CSS đầu tiên< /h2></p>
+<p>        < p>Các ý tưởng ban đầu được đưa ra năm 1994 nhưng phiên bản CSS1 chính thức ra đời năm 1996.< /p></p>
+<p>        < p>Phiên bản tiếp theo, CSS2, được khởi động ngay sau đó nhưng mãi đến năm 1998 mới hoàn thiện. Phiên bản chính thức hoàn thiện nhất của CSS2 là CSS2.1, ra đời năm 2011, bản CSS2.1 nâng cấp được hoàn thiện năm 2016.< /p></p>
+<p>        < h2 class="subtitle">Các phiên bản CSS tiếp theo< /h2></p>
+<p>        < p>Từ bản CSS3 trở đi, CSS được phát triển theo từng gói riêng biệt. Hiện nay các gói của CSS3 vẫn đang được phát triển và hoàn thiện. Đồng thời một số chuẩn CSS4 và CSS5 vẫn đang được tiếp tục thiết lập mới.< /p></p>
+<p>        < p>Hiện tại, hiệp hội chịu trách nhiệm phát triển các chuẩn của HTML, CSS và các công nghệ có liên quan là tổ chức World Wide Web Consortium (W3C), có địa chỉ tại < a href="http://www.w3.org/">www.w3.org< /a>.< /p></p>
+<p>    < /div></p>
+<p>< /body></p>
+<p>< /html></p>
     <br>
-CSS:<br>
-body {<br>
-    font-family: Arial, sans-serif;<br>
-    line-height: 1.6;B<br>
-    margin: 0;<br>
-    padding: 0;<br>
-    background-color: #f4f4f4;<br>
-    color: #333;<br>
-}<br>
-.container {<br>
-    width: 80%;<br>
-    margin: auto;<br>
-    overflow: hidden;<br>
-    padding: 20px;<br>
-}<br>
-.title, .subtitle {<br>
-    color: #333;<br>
-}<br>
-.title {<br>
-    text-align: center;<br>
-    margin: 20px 0;<br>
-}<br>
-.subtitle {<br>
-    margin: 10px 0 5px;<br>
-}<br>
-a {<br>
-    color: #007bff;<br>
-    text-decoration: none;<br>
-}<br>
-a:hover {<br>
-    text-decoration: underline;<br>
-}<br>
-p {<br>
-    margin: 10px 0;<br>
-}<br>
-
-
-
-
-
+<p>CSS:</p>
+<p>body {</p>
+<p>    font-family: Arial, sans-serif;</p>
+<p>    line-height: 1.6;B</p>
+<p>    margin: 0;</p>
+<p>    padding: 0;</p>
+<p>    background-color: #f4f4f4;</p>
+<p>    color: #333;</p>
+<p>}</p>
+<p>.container {</p>
+<p>    width: 80%;</p>
+<p>    margin: auto;</p>
+<p>    overflow: hidden;</p>
+<p>    padding: 20px;</p>
+<p>}</p>
+<p>.title, .subtitle {</p>
+<p>    color: #333;</p>
+<p>}</p>
+<p>.title {</p>
+<p>    text-align: center;</p>
+<p>    margin: 20px 0;</p>
+<p>}</p>
+<p>.subtitle {</p>
+<p>    margin: 10px 0 5px;</p>
+<p>}</p>
+<p>a {</p>
+<p>    color: #007bff;</p>
+<p>    text-decoration: none;</p>
+<p>}</p>
+<p>a:hover {</p>
+<p>    text-decoration: underline;</p>
+<p>}</p>
+<p>p {</p>
+<p>    margin: 10px 0;</p>
+<p>}</p>
