--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@ body {
   <body>
      <!-- Banner -->
     <div class="banner">
+      <style>
+        h1 {
+  text-shadow: 4px 4px 6px rgba(0,0,0,0.5);
+}
+      </style>
         <h1 style="text-align:center;text-decorating: none; color: white; padding: 0 30px;">Bài 13: KHÁI NIỆM, VAI TRÒ CỦA CSS</h1>
     </div>
   </body>
@@ -108,7 +113,7 @@ body {
 .banner {
     width: 100%;
     height: 300px;
-    background-image: url('bai13.jpg');
+    background-image: url('bai 13.png');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -219,3 +224,4 @@ body {
 <p>p {</p>
 <p>    margin: 10px 0;</p>
 <p>}</p>
+
