--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
 .banner {
     width: 100%;
     height: 300px;
-    background-image: url('bai 13.png');
+    background-image: url('bài 13.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -224,6 +224,7 @@ body {
 <p>p {</p>
 <p>    margin: 10px 0;</p>
 <p>}</p>
+
 
 
 
