--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
 .banner {
     width: 100%;
     height: 300px;
-    background-image: url('bài 13.jpg');
+    background-image: url('bài13.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -127,24 +127,24 @@ body {
     font-weight: bold;
 }
 </style>
-   <div id="wp-products">
-    <h1 style="text-align:center;text-decorating: none; color: #243b9a; padding: 0 30px;">LUYỆN TẬP</h1>
+  <div id="wp-products">
+    <h2 style="text-align:center;text-decorating: none; color: #243b9a; padding: 0 30px;">LUYỆN TẬP</h2>
   </div>
   <div style="background-color: #FFFFFF; padding: 10px;">
-      <h2>Luyện tập 1: Khẳng định “Ngôn ngữ định dạng CSS chính là ngôn ngữ HTML” là đúng hay sai?</h2> 
+      <h3>LUYỆN TẬP 1: Khẳng định “Ngôn ngữ định dạng CSS chính là ngôn ngữ HTML” là đúng hay sai?</h3> 
   </div>
       <p>Sai. Ngôn ngữ định dạng CSS (Cascading Style Sheets) không phải là ngôn ngữ HTML (HyperText Markup Language).</p>
 <p>HTML được sử dụng để tạo cấu trúc và định dạng nội dung trên trang web bằng cách sử dụng các thẻ và các thuộc tính được nhúng trong các thẻ này.</p>
 <p>Trong khi đó, CSS được sử dụng để điều chỉnh cách mà các phần tử HTML được hiển thị trên trình duyệt, bao gồm màu sắc, font chữ, khoảng cách, đường viền và các thuộc tính khác. CSS là một ngôn ngữ độc lập dùng để cung cấp phong cách và thiết kế cho các trang web, và nó hoạt động cùng với HTML để tạo ra trải nghiệm người dùng hoàn chỉnh.</p>
 <div style="background-color: #FFFFFF; padding: 10px;">
-        <h2>Luyện tập 2:  Khẳng định “Có thể chỉ cần thay đổi thông tin của tệp CSS sẽ làm thay đổi định dạng của nhiều trang web thậm chí của cả một trang website” là đúng hay sai?</h2>
+        <h3>LUYỆN TẬP 2:  Khẳng định “Có thể chỉ cần thay đổi thông tin của tệp CSS sẽ làm thay đổi định dạng của nhiều trang web thậm chí của cả một trang website” là đúng hay sai?</h3>
 </div>
     <p>Đúng. Việc chỉ cần thay đổi thông tin trong tệp CSS có thể làm thay đổi định dạng của nhiều trang web hoặc thậm chí của cả một trang web. Điều này là do CSS được sử dụng để kiểm soát phong cách và định dạng của các phần tử HTML trên trang web. Thay đổi các thuộc tính trong tệp CSS, chẳng hạn như màu sắc, kích thước, font chữ, độ dày của đường viền, và khoảng cách, có thể ảnh hưởng đến cách mà các phần tử HTML được hiển thị trên trang web. Do đó, việc chỉnh sửa CSS có thể ảnh hưởng lớn đến giao diện của nhiều trang web hoặc thậm chí của cả một trang web.</p>
         <div id="wp-products">
-    <h1 style="text-align:center;text-decorating: none; color: #243b9a; padding: 0 30px;">VẬN DỤNG</h1>
+    <h2 style="text-align:center;text-decorating: none; color: #243b9a; padding: 0 30px;">VẬN DỤNG</h2>
   </div>
           <div style="background-color: #FFFFFF; padding: 10px;">
-        <h2>Vận dụng 1: Trong các phần mềm soạn thảo văn bản thường có chức năng tạo các mẫu định dạng Style Sheet dùng để tạo khuôn cho các đoạn (paragraph) của văn bản. Em hãy trình bày sự giống nhau và tương thích của Style Sheet trong các phần mềm soạn thảo văn bản với CSS của trang web.</h2>
+        <h3>VẬN DỤNG 1: Trong các phần mềm soạn thảo văn bản thường có chức năng tạo các mẫu định dạng Style Sheet dùng để tạo khuôn cho các đoạn (paragraph) của văn bản. Em hãy trình bày sự giống nhau và tương thích của Style Sheet trong các phần mềm soạn thảo văn bản với CSS của trang web.</h3>
           </div>
       <p>Sự giống nhau và tương thích của Style Sheet  trong các phần mềm soạn thảo văn bản với CSS của trang web:</p>
 <p>-Cấu trúc và cú pháp: Cả Style Sheet trong các phần mềm soạn thảo văn bản và CSS đều tuân theo một cấu trúc và cú pháp nhất định. Thông thường, các tệp Style Sheet được viết bằng cú pháp CSS trong trang web, trong khi các chức năng tạo định dạng trong phần mềm soạn thảo văn bản cũng sẽ tuân theo một cấu trúc tương tự.</p>
@@ -152,20 +152,15 @@ body {
 <p>- Khuôn mẫu định dạng: Cả Style Sheet và CSS đều cho phép bạn tạo ra các khuôn mẫu định dạng để áp dụng cho các phần tử văn bản. Bằng cách này, bạn có thể định dạng các tiêu đề, đoạn văn, danh sách, v.v., một cách thống nhất và dễ dàng.</p>
 <p>- Kiểm soát phong cách và định dạng: Cả Style Sheet và CSS đều cho phép bạn kiểm soát phong cách và định dạng của các phần tử văn bản. Bạn có thể điều chỉnh màu sắc, kích thước chữ, font chữ, độ dày của đường viền, khoảng cách, v.v., để tạo ra giao diện văn bản phù hợp với ý định của mình.</p>
 <div style="background-color: #FFFFFF; padding: 10px;">
-        <h2>Vận dụng 2: Thiết lập trang web với nội dung sau và định dạng trang bằng các mẫu CSS</h2>
+        <h3>VẬN DỤNG 2: Thiết lập trang web với nội dung sau và định dạng trang bằng các mẫu CSS</h3>
 </div>
-<img src="vandung2.png">
-     <style>
-    /* CSS để thu nhỏ hình ảnh */
-    .thumbnail {
-      width: 20px;    /* chiều rộng hình ảnh */
-      height: auto;    /* tự động giữ tỉ lệ */
-      border: 1px solid #ccc; /* thêm viền tùy chọn */
-      border-radius: 8px;     /* bo góc hình ảnh */
-      display: block;
-      margin: 20px 0;
-    }
-  </style>
+<img src="vandung2.png" class="img-nho">
+<style>
+  .img-nho {
+    width: 150px;      /* chỉnh kích thước */
+    height: auto;      /* giữ đúng tỉ lệ */
+  }
+</style>
 <p>< !DOCTYPE html></p>
 <p>< html lang="vi"></p>
 <p>< head></p>
@@ -224,7 +219,3 @@ body {
 <p>p {</p>
 <p>    margin: 10px 0;</p>
 <p>}</p>
-
-
-
-
