--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html lang="vi">
   <head>
     <meta charset = "UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+    <title>BÀI 13</title>
    <body>
  <style>
 body {
@@ -219,5 +220,6 @@ body {
 <p>p {</p>
 <p>    margin: 10px 0;</p>
 <p>}</p>
+
 
 
